sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:7: error: not found: value valeur
      if (!plusPetitQue(i-j,valeur)) {
                            ^